updated ticker list

--- a/config/tickers.yaml
+++ b/config/tickers.yaml
@@ -4,3 +4,58 @@ tickers:
   - TSLA
   - MSFT
   - GME
+  - FUBO
+  - PLTR
+  - BAC
+  - NAKD
+  - INTC
+  - AMD
+  - NIO
+  - SIRI
+  - AAL
+  - FB
+  - TWTR
+  - SPOT
+  - BABA
+  - AMC
+  - BB
+  - CCL
+  - NOK
+  - F
+  - TLRY
+  - RBLX
+  - LYFT
+  - UBER
+  - PYPL
+  - NKE
+  - NCLH
+  - VZ
+  - KO
+  - LUMN
+  - MS
+  - GE
+  - T
+  - FBIO
+  - PCG
+  - ORCL
+  - BA
+  - GM
+  - CS
+  - UAA
+  - JNJ
+  - NKLA
+  - BIDU
+  - CVX
+  - WMT
+  - TGT
+  - HPQ
+  - DISCK
+  - DIS
+  - BRK.B
+  - GILD
+  - V
+  - GRMN
+  - DASH
+  - GRUB
+  - ZM
+  - AMZN
